he anyadido discografia, pero no he terminado

--- a/discografia.html
+++ b/discografia.html
@@ -65,47 +65,42 @@
                     </ul>
                 </div>
         </header>
-        <body>
-
-            <div class="cont">
+        <main>
+            <div class="container"> 
                 <div class="box">
-                    <h2>RAMMSTEIN XXXIII – Limited Edition Collector's Vinyl Box</h2>
-                    <p>El 14 de noviembre de 2025 se publicará por primera vez la colección completa de los 33 singles oficiales de Rammstein en vinilo negro de 7″.</p>
-                    <img src="img/image 1.webp" alt="">
+                    <div class="album">
+                        <img src="img/Herzeleid (1995).jpg" alt="Album 1">
+                        <h2>Herzeleid (1995)</h2>
+                    </div>
+                    <div class="album">
+                        <img src="img/Sehnsucht (1997).jpg" alt="Album 2">
+                        <h2>Sehnsucht (1997)</h2>
+                    </div>
+                    <div class="album">
+                        <img src="img/Mutter (2001).jpg" alt="Album 3">
+                        <h2>Mutter (2001)</h2>
+                    </div>
+                     <div class="album">
+                        <img src="img/Reise, Reise (2004).jpg" alt="Album 4">
+                        <h2>Reise, Reise (2004)</h2>
+                    </div>
                 </div>
-
                 <div class="box">
-                    <h2>Rammstein.Charity is back</h2>
-                    <p>A partir de hoy, varios premios de la carrera de la banda se subastarán gradualmente en las próximas semanas para apoyar a organizaciones benéficas seleccionadas.</p>
-                    <img src="img/image.webp" alt="">
-                </div>
-
-                <div class="box">
-                    <h2>Behind The Scenes of the World Stadium Tour 2019-2024</h2>
-                    <p>2024 marca el final de la gira de estadios mundial de Rammstein. Un viaje que duró cinco años, incluyó 135 conciertos y emocionó a la increíble cifra de seis millones de fans.</p>
-                    <img src="img/behind-the-scenes-of-the-world-stadium-tour-2019-2024.webp" alt="">
-                </div>
-
-            </div>
-            <div class="cont" id="">
-                <div class="box">
-                    <h2>NACH DER TOUR 2024</h2>                
-                    <p>Wir möchten all unseren Fans, unseren Freunden und Besuchern unserer Konzerte ein großes Dankeschön aussprechen.<br> Vielen Dank für euren Support, eure Wärme und Unterstützung auf dieser Tour 2024.</p>
-                    <img src="img/rst-statement-website-square.webp" alt="">
-                </div>
-                
-                <div class="box">
-                    <h2>RAMMSTEIN POP UP STORES 2024</h2>
-                    <p>¡La RammsteinStore oficial se va de gira de nuevo este año! <br>En nuestras Pop Up Stores presentamos productos nuevos y limitados, así como la conocida gama RammsteinShop en un entorno exclusivo.</p>
-                    <img src="img/20240320-133604_popupfoto.webp" alt="">
-                </div>
-
-                <div class="box">
-                    <h2>Comienza la reserva anticipada <br> para Atenas y Frankfurt</h2>
-                    <p>Hoy comienza la preventa para los espectáculos de la Gira por los Estadios de Europa 2024 en Atenas y Frankfurt. Entradas en www.rammstein.com/tickets.</p>
-                    <img src="img/image (1).webp" alt="">
+                   
+                    <div class="album">
+                        <img src="img/Rosenrot (2005).jpg" alt="Album 5">
+                        <h2>Rosenrot (2005)</h2>
+                    </div>
+                    <div class="album">
+                        <img src="img/Liebe ist für alle da (2009).jpg" alt="Album 6">
+                        <h2>Liebe ist für alle da (2009)</h2>
+                    </div>
+                    <div class="album">
+                        <img src="img/Rammstein (2019).jpg" alt="Album 7" >
+                        <h2>Rammstein (2019)</h2>
+                    </div>
                 </div>
             </div>
-        </body>
+        </main>
     </body>
 </html>
