he hecho fix de menu de navigacion

--- a/discografia.html
+++ b/discografia.html
@@ -56,7 +56,7 @@
                         
                     </ul>
                     <ul class="nav_links">
-                        <li><a href="https://open.spotify.com/artist/6wWVKhxIU2cEi0K81v7HvP" target="_blank">Discografia</a></li>
+                        <li><a href="discografia.html" target="_blank">Discografia</a></li>
                     </ul>
                     <ul class="nav_links">
                         <li>
