--- a/gira.html
+++ b/gira.html
@@ -42,7 +42,7 @@
             </ul>
             <ul class="nav_links">
                 <li>
-                    <a href="">Gira</a>
+                    <a href="gira.html">Gira</a>
                     <div class="submenu">
                         <a href="">Gira completa</a>
                         <a href="">Galeria</a>
@@ -57,7 +57,7 @@
             </ul>
             <ul class="nav_links">
                 <li>
-                    <a href="https://open.spotify.com/artist/6wWVKhxIU2cEi0K81v7HvP" target="_blank">Discografia</a>
+                    <a href="discografia.html" target="_blank">Discografia</a>
                 </li>
             </ul>
             <ul class="nav_links">
