he vinculado todos los index

--- a/galeria.html
+++ b/galeria.html
@@ -47,7 +47,7 @@
                             <a href="">Gira</a>
                             <div class="submenu">
                                 <a href="gira.html">Gira completa</a>
-                                <a href="">Galeria</a>
+                                <a href="galeria.html">Galeria</a>
                                 <a href="">Compra de etrados</a>
                             </div>
                         </li>
