--- a/gira.html
+++ b/gira.html
@@ -45,7 +45,7 @@
                     <a href="gira.html">Gira</a>
                     <div class="submenu">
                         <a href="">Gira completa</a>
-                        <a href="">Galeria</a>
+                        <a href="galeria.html">Galeria</a>
                         <a href="">Compra de etrados</a>
                     </div>
                 </li>
