he anadido todo lo q faltaba

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <div class="submenu">
                                 <a href="gira.html">Gira completa</a>
                                 <a href="galeria.html">Galeria</a>
-                                <a href="">Compra de etrados</a>
+                                <a href="entradas.html">Compra de entradas</a>
                             </div>
                         </li>
                     </ul>
