--- a/galeria.html
+++ b/galeria.html
@@ -48,7 +48,7 @@
                             <div class="submenu">
                                 <a href="gira.html">Gira completa</a>
                                 <a href="galeria.html">Galeria</a>
-                                <a href="">Compra de etrados</a>
+                                <a href="entradas.html">Compra de entradas</a>
                             </div>
                         </li>
                     </ul>
@@ -130,7 +130,16 @@
                         </div>
                     </div>
                 </div>
-            </div>  
+                <div class="track_section">
+                    <h2>Canción Más Popular de Rammstein</h2>
+                    <div class="track_container">
+                        <iframe width="800" height="450" src="https://www.youtube.com/embed/StZcUAPRRac?enablejsapi=1" 
+                        title="Rammstein - Sonne (Official Video)" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        allowfullscreen></iframe>
+                        <p class="track_description">"Sonne" - El himno más icónico de Rammstein con más de 300 millones de reproducciones</p>
+                    </div>
+             </div>
         </main>
     </body>
 </html>
