--- a/gira.html
+++ b/gira.html
@@ -42,11 +42,11 @@
             </ul>
             <ul class="nav_links">
                 <li>
-                    <a href="gira.html">Gira</a>
+                    <a href="">Gira</a>
                     <div class="submenu">
-                        <a href="">Gira completa</a>
+                        <a href="gira.html">Gira completa</a>
                         <a href="galeria.html">Galeria</a>
-                        <a href="">Compra de etrados</a>
+                        <a href="entradas.html">Compra de entradas</a>
                     </div>
                 </li>
             </ul>
