he anadido enlasado de registro

--- a/gira.html
+++ b/gira.html
@@ -62,7 +62,7 @@
             </ul>
             <ul class="nav_links">
                 <li>
-                    <a href="">Registro</a>
+                    <a href="registro.html">Registro</a>
                 </li>
             </ul>
         </div>
