--- a/discografia.html
+++ b/discografia.html
@@ -47,7 +47,7 @@
                             <div class="submenu">
                                 <a href="gira.html">Gira completa</a>
                                 <a href="galeria.html">Galeria</a>
-                                <a href="">Compra de etrados</a>
+                                <a href="entradas.html">Compra de entradas</a>
                             </div>
                         </li>
                     </ul>
@@ -60,7 +60,7 @@
                     </ul>
                     <ul class="nav_links">
                         <li>
-                            <a href="">Registro</a>
+                            <a href="registro.html">Registro</a>
                         </li>
                     </ul>
                 </div>
