--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </ul>
                     <ul class="nav_links">
                         <li>
-                            <a href="">Registro</a>
+                            <a href="registro.html">Registro</a>
                         </li>
                     </ul>
                 </div>
