cambios despus de examen

--- a/discografia.html
+++ b/discografia.html
@@ -53,7 +53,6 @@
                     </ul>
                     <ul class="nav_links">
                         <li><a href="https://www.reddit.com/r/Rammstein/" target="_blank">Miembros</a></li>
-                        
                     </ul>
                     <ul class="nav_links">
                         <li><a href="discografia.html" target="_blank">Discografia</a></li>
@@ -61,6 +60,15 @@
                     <ul class="nav_links">
                         <li>
                             <a href="registro.html">Registro</a>
+                        </li>
+                    </ul>
+                    <ul class="nav_links">
+                        <li>
+                            <a href="">Tienda</a>
+                            <div class="submenu">
+                                <a href="merch.html">Merchandising</a>
+                                <a href="discos.html">Discos</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
