--- a/merch.html
+++ b/merch.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&family=BBH+Sans+Bogle&family=Bitcount+Grid+Double:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/discografia.css">
+    <link rel="stylesheet" href="css/merch.css">
 </head>
      <body background="img/bg.jpg">
         
@@ -73,48 +74,45 @@
                     </ul>
                 </div>
         </header>
-        <body>
+        <body1>
 
-            <div class="cont">
-                <div class="box">
-                    <h2>RAMMSTEIN XXXIII – Limited Edition Collector's Vinyl Box</h2>
-                    <p>El 14 de noviembre de 2025 se publicará por primera vez la colección completa de los 33 singles oficiales de Rammstein en vinilo negro de 7″.</p>
-                    <img src="img/image 1.webp" alt="">
+            <div class="merch_container">
+                <div class="merch_item">
+                    <div class="img_item">
+                        <img src="img/merch1.avif" alt="Merch 1">
+                    </div>
+                    <h3>Camiseta Rammstein</h3>
+                    <p>Precio: $25.00</p>
                 </div>
-
-                <div class="box">
-                    <h2>Rammstein.Charity is back</h2>
-                    <p>A partir de hoy, varios premios de la carrera de la banda se subastarán gradualmente en las próximas semanas para apoyar a organizaciones benéficas seleccionadas.</p>
-                    <img src="img/image.webp" alt="">
+                <div class="merch_item">
+                    <div class="img_item">
+                        <img src="img/merch2.avif" alt="Merch 2">
+                    </div>
+                    <h3>Sudadera Rammstein</h3>
+                    <p>Precio: $50.00</p>
                 </div>
-
-                <div class="box">
-                    <h2>Behind The Scenes of the World Stadium Tour 2019-2024</h2>
-                    <p>2024 marca el final de la gira de estadios mundial de Rammstein. Un viaje que duró cinco años, incluyó 135 conciertos y emocionó a la increíble cifra de seis millones de fans.</p>
-                    <img src="img/behind-the-scenes-of-the-world-stadium-tour-2019-2024.webp" alt="">
+                <div class="merch_item">
+                    <div class="img_item">
+                        <img src="img/merch3.avif" alt="Merch 3">
+                    </div>
+                    <h3>Camisa Rammstein</h3>
+                    <p>Precio: $20.00</p>
                 </div>
-
-            </div>
-            <div class="cont" id="">
-                <div class="box">
-                    <h2>NACH DER TOUR 2024</h2>                
-                    <p>Wir möchten all unseren Fans, unseren Freunden und Besuchern unserer Konzerte ein großes Dankeschön aussprechen.<br> Vielen Dank für euren Support, eure Wärme und Unterstützung auf dieser Tour 2024.</p>
-                    <img src="img/rst-statement-website-square.webp" alt="">
+                <div class="merch_item">
+                    <div class="img_item">
+                        <img src="img/merch4.avif" alt="Merch 4">
+                    </div>
+                    <h3>Camiseta</h3>
+                    <p>Precio: $20.00</p>
                 </div>
-                
-                <div class="box">
-                    <h2>RAMMSTEIN POP UP STORES 2024</h2>
-                    <p>¡La RammsteinStore oficial se va de gira de nuevo este año! <br>En nuestras Pop Up Stores presentamos productos nuevos y limitados, así como la conocida gama RammsteinShop en un entorno exclusivo.</p>
-                    <img src="img/20240320-133604_popupfoto.webp" alt="">
-                </div>
-
-                <div class="box">
-                    <h2>Comienza la reserva anticipada <br> para Atenas y Frankfurt</h2>
-                    <p>Hoy comienza la preventa para los espectáculos de la Gira por los Estadios de Europa 2024 en Atenas y Frankfurt. Entradas en www.rammstein.com/tickets.</p>
-                    <img src="img/image (1).webp" alt="">
+                <div class="merch_item">
+                    <div class="img_item">
+                        <img src="img/merch5.avif" alt="Merch 5">
+                    </div>
+                    <h3>Shorts Rammstein</h3>
+                    <p>Precio: $20.00</p>
                 </div>
             </div>
-        </body>
+        </body1>
     </body>
 </html>
-<!-- писюн -->
