--- a/entradas.html
+++ b/entradas.html
@@ -12,58 +12,67 @@
 </head>
 <body background="img/bg.jpg">
     
-    <header>
-        <div class="nav">
-            <img src="img/descarga (1).png" alt="logo ramstain" class="logo">
-            <div class="menu">
-                <h1 id="mainTitle">RAMMSTEIN</h1>
-                <ul class="menu_links">
-                    <li>
-                        <a href="https://www.instagram.com/rammsteinofficial/" class="links" target="_blank">
-                            <img src="img/instagram.png" alt="instagram" class="logo_linc">
-                        </a>
-                        <a href="https://www.facebook.com/Rammstein" class="links" target="_blank">
-                            <img src="img/twitter.png" alt="x" class="logo_linc">
-                        </a>
-                        <a href="https://www.facebook.com/Rammstein" class="links" target="_blank">
-                            <img src="img/facebook.png" alt="facebook" class="logo_linc">
-                        </a>
-                        <a href="https://www.youtube.com/@RammsteinOfficial" class="links" target="_blank">
-                            <img src="img/youtube.png" alt="youtube" class="logo_linc">
-                        </a>
-                    </li>
-                </ul>
+        <header>
+            <div class="nav">
+                <img src="img/descarga (1).png" alt="logo ramstain" class="logo">
+                <div class="menu">
+                    <h1 id="mainTitle">RAMMSTEIN</h1>
+                    <ul class="menu_links">
+                        <li>
+                            <a href="https://www.instagram.com/rammsteinofficial/" class="links" target="_blank">
+                                <img src="img/instagram.png" alt="instagram" class="logo_linc" >
+                            </a>
+                            <a href="https://www.facebook.com/Rammstein" class="links" target="_blank">
+                                <img src="img/twitter.png" alt="x" class="logo_linc">
+                            </a>
+                            <a href="https://www.facebook.com/Rammstein" class="links" target="_blank">
+                                <img src="img/facebook.png" alt="facebook" class="logo_linc">
+                            </a>
+                            <a href="https://www.youtube.com/@RammsteinOfficial" class="links" target="_blank">
+                                <img src="img/youtube.png" alt="youtube" class="logo_linc">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="navigator">
-            <ul class="nav_links">
-                <li>
-                    <a href="index.html">Inicio</a>
-                </li>
-            </ul>
-            <ul class="nav_links">
-                <li>
-                    <a href="">Gira</a>
-                    <div class="submenu">
-                        <a href="gira.html">Gira completa</a>
-                        <a href="galeria.html">Galeria</a>
-                        <a href="entradas.html">Compra de entradas</a>
-                    </div>
-                </li>
-            </ul>
-            <ul class="nav_links">
-                <li><a href="https://www.reddit.com/r/Rammstein/" target="_blank">Miembros</a></li>
-            </ul>
-            <ul class="nav_links">
-                <li><a href="discografia.html" target="_blank">Discografia</a></li>
-            </ul>
-            <ul class="nav_links">
-                <li>
-                    <a href="registro.html">Registro</a>
-                </li>
-            </ul>
-        </div>
-    </header>
+             <div class="navigator">
+                    <ul class="nav_links">
+                        <li>
+                            <a href="index.html">Inicio</a>
+                        </li>
+                    </ul>
+                    <ul class="nav_links">
+                        <li>
+                            <a href="">Gira</a>
+                            <div class="submenu">
+                                <a href="gira.html">Gira completa</a>
+                                <a href="galeria.html">Galeria</a>
+                                <a href="entradas.html">Compra de entradas</a>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="nav_links">
+                        <li><a href="https://www.reddit.com/r/Rammstein/" target="_blank">Miembros</a></li>
+                    </ul>
+                    <ul class="nav_links">
+                        <li><a href="discografia.html" target="_blank">Discografia</a></li>
+                    </ul>
+                    <ul class="nav_links">
+                        <li>
+                            <a href="registro.html">Registro</a>
+                        </li>
+                    </ul>
+                    <ul class="nav_links">
+                        <li>
+                            <a href="">Tienda</a>
+                            <div class="submenu">
+                                <a href="merch.html">Merchandising</a>
+                                <a href="discos.html">Discos</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+        </header>
 
     <main>
         <h1>Compra de Entradas</h1>
